--- a/Source/Tailwind.Traders.Web/ClientApp/src/assets/locales/translation.json
+++ b/Source/Tailwind.Traders.Web/ClientApp/src/assets/locales/translation.json
@@ -1,8 +1,8 @@
 {
     "en": {
       "translation": {
-        "home.hero.shiping": "Free Shipping",
-        "home.hero.orders": "For $100 or more orders",
+        "home.hero.shiping": "Free Shipping!!!",
+        "home.hero.orders": "For $200 or more orders",
 
         "home.recommended.recommended": "Recommended",
         "home.recommended.uploadPhotoTitle": "By uploading a photo",
